# myFastAPI-mongo

./: README.md  docker-compose.yml  pyproject.toml
src/: app.py
