[tool.poetry]
name = "myfastapi-mongo"
version = "0.1.0"
description = ""
authors = ["Yuri Chiucconi <yuri.chiucconi@exact-lab.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pymongo = "^4.6.1"

[tool.poetry.group.dev.dependencies]
devtools = "^0.12.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
